# chief-of-staff

./: .env.example  .gitignore  .mcp.json  .mcpbignore  CLAUDE.md  README.md  STATE_MANAGEMENT_BRITTLENESS_AUDIT.md  config.py  main.py  manifest.json  mcp_server.py  pyproject.toml  requirements.txt  setup.sh
agent_configs/: action_item_tracker.yaml  agenda_manager.yaml  approval_triage.yaml  architecture_reviewer.yaml  backlog_manager.yaml  black_box_tester.yaml  code_quality_reviewer.yaml  communications.yaml  cto.yaml  daily_briefing.yaml  data_visualizer.yaml  decision_tracker.yaml  delegation_tracker.yaml  document_fetcher.yaml  document_librarian.yaml  email_and_awareness_metrics.yaml  endpoint_security_metrics.yaml  example_agent.yaml  github_security.yaml  inbox_triage.yaml  incident_summarizer.yaml  knowbe4_metrics.yaml  meeting_debrief.yaml  meeting_prep.yaml  mimecast_metrics.yaml  okr_tracker.yaml  presentation_builder.yaml  proactive_alerts.yaml  product_manager.yaml  project_manager.yaml  project_planner.yaml  project_researcher.yaml  project_review_architecture.yaml  project_review_board.yaml  project_review_delivery.yaml  project_review_product.yaml  project_review_reliability.yaml  project_review_security.yaml  report_builder.yaml  research_and_strategy.yaml  (+8 more)
agents/: base.py  factory.py  loop_detector.py  mixins.py  registry.py  triage.py
apple_calendar/: eventkit.py
apple_mail/: mail.py
apple_messages/: __init__.py  messages.py
apple_notifications/: notifier.py
apple_reminders/: eventkit.py
assets/: iterm2-profile.json  jarvis-banner.sh
audit-workspace/: AUDIT-REPORT.md  FEATURE-HEALTH.md  REMEDIATION-PLAN.md  cross-cutting.md  feature-map.md  intent-map.md  security-report.md
browser/: __init__.py  ab_navigator.py  ab_poster.py  agent_browser.py  constants.py  manager.py  navigator.py  okta_auth.py  sharepoint_download.py  teams_poster.py
capabilities/: __init__.py  registry.py
channels/: adapter.py  consumers.py  models.py  router.py  routing.py
chief/: dispatcher.py  imessage_daemon.py  imessage_executor.py  imessage_tools.py  orchestrator.py
commands/: agents.md  chief.md  recall.md  remember.md
connectors/: __init__.py  calendar_unified.py  claude_m365_bridge.py  graph_client.py  provider_base.py  router.py
delivery/: __init__.py  service.py
docs/: agents.md  architecture.md  brittleness-audit-test-coverage.md  capability-registry-extensions.md  how-to-guides.md  hybrid-agent-plan.md  inbox-monitor-setup.md  linkedin-article.md  linkedin-post.md  modules.md  naming-consolidation-analysis.md  project-review-team.md  setup-guide.md  tools-reference.md  workflow-brittleness-analysis.md
(+420 files in other folders)
