[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chief-of-staff"
version = "0.1.0"
description = "AI orchestration system with a Chief of Staff managing expert agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
chief = "main:cli_entry"
