[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "AI orchestration system with a Chief of Staff managing expert agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "mcp[cli]>=1.26,<2",
    "pyobjc-framework-EventKit>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.setuptools.packages.find]
include = ["memory*", "agents*", "documents*", "chief*", "tools*", "apple_calendar*"]

[tool.setuptools.package-data]
"agent_configs" = ["*.yaml"]

[tool.setuptools]
py-modules = ["mcp_server", "config"]

[project.scripts]
chief = "main:cli_entry"
jarvis-mcp = "mcp_server:main"
